8264395: WB_EnqueueInitializerForCompilation fails with method holder must be initialized when called for uninitialized class